# luabot-deps

./: .dockerignore  .gitignore  Dockerfile  README.md  ctredeps.py  ctrelinks.py  deps.py  install.sh  luajit.sh  meson-cross.ini  meson-native.ini  meson.build  phoenixdeps.sh  riodeps.py  wpilib.py
src/: download-phoenix6.sh  download-wpilib.sh  download.sh
